--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -155,6 +155,14 @@
 	<string name="groups_group_is_dissolved">This group is dissolved</string>
 	<string name="groups_remove">Remove</string>
 	<string name="groups_add_group_title">Add Private Group</string>
+	<string name="groups_no_messages">This group is empty.\n\nYou can use the pen icon at the top to compose the first message.</string>
+	<string name="groups_compose_message">Compose Message</string>
+	<string name="groups_message_sent">Message sent</string>
+	<string name="groups_message_received">Message received</string>
+	<string name="groups_member_list">Member List</string>
+	<string name="groups_invite_members">Invite Members</string>
+	<string name="groups_leave">Leave Group</string>
+	<string name="groups_dissolve">Dissolve Group</string>
 
 	<!-- Forums -->
 	<string name="no_forums">You don\'t have any forums yet.\n\nWhy don\'t you create a new one yourself by tapping the + icon at the top?\n\nYou can also ask your contacts to share forums with you.</string>
